--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.12.1",
     "sass": "^1.62.1",
     "typescript": "5.0.4"
   }
